# blog-posts-svc

./: Dockerfile  README.md  flaskblog.py  forms.py  pyproject.toml  requirements.txt  run.py
Flask_Blog/flaskblog/: __init__.py  models.py  routes.py
Flask_Blog/flaskblog/templates/: about.html  register.html
flaskblog/: __init__.py  forms.py  models.py  routes.py
flaskblog/templates/: home.html  layout.html  login.html
instance/: site.db
templates/: layout.html  login.html  register.html
