[project]
name = "blog-posts-svc"
version = "0.1.0"
description = ""
authors = [
    {name = "Q Ma",email = "corrie.ma@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "blinker (==1.8.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
